map data is a thing

--- a/src/TGGDRTFN.Business/TGGDRTFN.Business.vbproj
+++ b/src/TGGDRTFN.Business/TGGDRTFN.Business.vbproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\TGGDRTFN.Data\TGGDRTFN.Data.vbproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
